added html5 structure to index

--- a/index.html
+++ b/index.html
@@ -1,1 +1,17 @@
-Hello World!
+<!doctype html>
+
+<html>
+<head>
+  <meta charset="utf-8">
+
+  <title>Spoty</title>
+  <meta name="description" content="An experiment about Spotify data">
+  <meta name="author" content="Mira Cirera">
+</head>
+
+<body>
+    <h1>Hello World!</h1>
+</body>
+</html>
+
+
