updated tittle to index

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <html>
     <head>
-        <title>Spoty</title>
+        <title>Spoty2</title>
         <meta charset="utf-8">
         <meta name="description" content="An experiment about Spotify data">
         <meta name="author" content="Mira Cirera">
