Initial User HTML & CSS

--- a/index.html
+++ b/index.html
@@ -6,10 +6,57 @@
         <meta charset="utf-8">
         <meta name="description" content="An experiment about Spotify data">
         <meta name="author" content="Mira Cirera">
+        <style>
+
+        body{
+            font-family: helvetica;
+            font-weight: lighter;
+        }
+        .container{
+            background-color: rgba(59, 57, 57, 0.56);
+            height: 500px;
+            width: 500px;
+        }
+        .container {}
+        .header {
+            padding: 20px;
+        }
+        .header div{
+            text-align: center;
+        }
+        .name {
+            color: #CEC7C7;
+            font-size: 30px;
+        }
+        .email{
+            color:#000000;
+            font-size: 15px;
+            }
+        .body {}
+        .footer {
+            color:#000000;
+            background-color: #D8D8D8;
+        }
+
+        </style>
     </head>
 
     <body>
         <h1>Hello World!</h1>
+
+        <div class="container">
+            <div class="header">
+                <div class="name">Mira Cirera</div>
+                <div class="email">mirapcs@gmail.com</div>
+            </div>
+            <div class="body"></div>
+            <div class="footer">
+                <span></span>
+                <span></span>
+                <span></span>
+            </div>
+        </div>
+
     </body>
 </html>
 
