--- a/index.html
+++ b/index.html
@@ -8,52 +8,101 @@
         <meta name="author" content="Mira Cirera">
         <style>
 
-        body{
+        html, body, * {
+            box-sizing: border-box;
+        }
+
+        html, body{
+            width: 100%;
+            height:100%;
             font-family: helvetica;
             font-weight: lighter;
+            display:flex;
+            flex: 1 1 auto;
+            flex-direction: column;
+            margin:0px;
         }
+
+        .container, 
+        .main, 
+        .footer{
+            display:flex;
+            flex: 1 1 auto;
+        }
+
         .container{
+            flex-direction: column;
             background-color: rgba(59, 57, 57, 0.56);
-            height: 500px;
-            width: 500px;
+            width:260px;
+            height:270px;
+            flex: 0 0 auto;
+            border-style: solid;
+            border-width:0.5px;
+            border-color: #32C752;
         }
-        .container {}
+
         .header {
-            padding: 20px;
+            display:flex;
+            flex: 1 1 auto;
+            flex-direction: column;
+            justify-content: center;
+            width:80%;
+            border-bottom: 0.5px solid rgba(225, 223, 223, 0.5);
+            align-self: center;
         }
         .header div{
             text-align: center;
         }
         .name {
             color: #CEC7C7;
-            font-size: 30px;
+            font-size: 20px;
         }
         .email{
             color:#000000;
-            font-size: 15px;
+            font-size: 11px;
+            padding-top: 5px;
             }
-        .body {}
+
+        .main {
+            justify-content: center;
+            align-items: center;
+        }
+
+        .profile-image{
+            border-radius: 50%;
+        }
+
         .footer {
             color:#000000;
-            background-color: #D8D8D8;
+            background-color: rgba(255, 255, 255, 0.81);
+            flex-direction:row;
+            justify-content: space-around;
+            align-items: center;
+            margin:4px;
         }
+
+        .icon_value{
+            font-size: 11px;
+        }
+
 
         </style>
     </head>
 
     <body>
-        <h1>Hello World!</h1>
 
         <div class="container">
             <div class="header">
                 <div class="name">Mira Cirera</div>
                 <div class="email">mirapcs@gmail.com</div>
             </div>
-            <div class="body"></div>
+            <div class="main">
+                <img class="profile-image" src="images/MiraCirera.jpg" alt="profile Image" style="width:105px;height:106px;">
+            </div>
             <div class="footer">
-                <span></span>
-                <span></span>
-                <span></span>
+                <span class="icon_value">UK</span>
+                <span class="icon_value">USER</span>
+                <span class="icon_value">1731</span>
             </div>
         </div>
 
