--- a/index.html
+++ b/index.html
@@ -86,7 +86,9 @@
         }
 
 
-        </style>
+        </style>  
+
+
     </head>
 
     <body>
@@ -105,6 +107,34 @@
                 <span class="icon_value">1731</span>
             </div>
         </div>
+
+        <script>
+            
+            var current_time;
+            var alarm_times;
+            var index;
+
+            current_time = 2;
+            alarm_times = [2,9,2,5];
+            alarm_texts = ['hola', 'hasta mañana', 'buenas noches','lerele'];
+
+            index = 3;
+            
+            while ( index > -1 ) {
+
+                if(current_time == alarm_times[index]) {
+                    console.log(alarm_texts[index]);
+                }
+
+                index = index - 1;
+            }
+
+            /**
+            buenas noches
+            hola
+            */
+  
+        </script>
 
     </body>
 </html>
